--- a/admin/styles.css
+++ b/admin/styles.css
@@ -1,6 +1,6 @@
-.settings_page_imgur_image_upload_settings .nav-tab-help { float: right; }
+body.settings_page_iufi_settings .nav-tab-help { float: right; }
 
-body.settings_page_imgur_image_upload_settings .review-hint-button:after {
+body.settings_page_iufi_settings .review-hint-button:after {
 	color: #d4af37;
 	content: "\f155 \f155 \f155 \f155 \f155";
 	display: inline-block;
